fix: the bottom of measurement option is cut off

--- a/src/components/MeasurementOption/MeasurementOption.scss
+++ b/src/components/MeasurementOption/MeasurementOption.scss
@@ -57,6 +57,7 @@
   .Precision {
     display: flex;
     flex-direction: column;
+    margin-bottom: 16px;
   }
   
   .LayoutTitle {
